[UPDATE] Added agent-scroll.js, fixed overlap with contact form on lower res displays and stops agent movement at a certain point.

--- a/resources/cover.css
+++ b/resources/cover.css
@@ -448,11 +448,12 @@ body {
   .agent-img {
     display: block;
     position: fixed;
-    top: -60px;
     right: 2%;
+    bottom: 0;
     width: 15vw;
     max-width: 255px;
     min-width: 200px;
+    padding-bottom: 60vh;
   }
 }
   
